@@ -1,3 +1,7 @@
+1998-09-19  Marcus G. Daniels  <mgd@wijiji.santafe.edu>
+
+	* internal.m (keep_on_screen):  Account for border width.
+
 1998-09-17  Marcus G. Daniels  <mgd@wijiji.santafe.edu>
 
 	* Pixmap.[hm] ([Pixmap -setDecorationsFlag:], [Pixmap +createBegin:],
